--- a/waybar/style.css
+++ b/waybar/style.css
@@ -132,6 +132,10 @@ label:focus {
     color: @accent1;
 }
 
+#disk {
+    color: @accent3;
+}
+
 #memory {
     color: #86e2d5;
 }
@@ -195,8 +199,9 @@ label:focus {
 }
 
 #idle_inhibitor {
-    background-color: #343434;
+    background-color: #6c7086;
     border-radius: 4px;
+    min-width: 16px
 }
 
 #mpd {
